attempt at fixing checkbox alignment

--- a/public/styles/magicItems.css
+++ b/public/styles/magicItems.css
@@ -1,30 +1,25 @@
 .magicItems .line {
     font-size: 10px;
     width: 90%;
-    padding-bottom: 3px;
     border-bottom: 1px solid black;
 }
 
 .magicItems input[type=checkbox] {
-    float: right;
+    margin-left: auto;
+    display: block;
     position: relative;
     right: 10px;
-}
-
-.magicItems label {
-    padding-left: 50px;
-    font-size: 10px;
-    position: relative;
-    top: 6px;
+    bottom: 10px;
 }
 
 .magicItems .name {
     position: relative;
     left: 40px;
     font-weight: bold;
+    top:17px;
 }
 
 .magicItems span {
     position: relative;
-    top: 3px;
+    top: 17px;
 }
